--- a/M8Objetos/M8.1Exercici1MètodesArray/metodosArray.html
+++ b/M8Objetos/M8.1Exercici1MètodesArray/metodosArray.html
@@ -146,7 +146,7 @@
 
         function map(){
           let nombresMayusculas = personas.map(persona => persona.nombre.toUpperCase());
-          console.log(nombresMayusculas);
+          console.log(nombresMayusculas);map()
           alert(nombresMayusculas);
         }
       </script>
